Fix email metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = simple_diarizer
-author = Chau
-author_email = chau@.chau.com
+author = Chau Luu
+author_email = cvqluu@gmail.com
 description = Simplified diarization pipeline using some pretrained models - audio file to diarized segments in a few lines of code
 classifiers =
     Programming Language :: Python :: 3
