--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,8 @@
 name = simple_diarizer
 author = Chau Luu
 author_email = cvqluu@gmail.com
+long_description = file: README.md
+long_description_content_type = text/markdown,
 description = Simplified diarization pipeline using some pretrained models - audio file to diarized segments in a few lines of code
 classifiers =
     Programming Language :: Python :: 3
