--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-beautifulsoup4==4.10.0
+beautifulsoup4>=4.10.0
 matplotlib>=3.5.1
 pandas>=1.3.5
-pytube==11.0.2
+pytube>=11.0.2
 scikit-learn>=1.0.2
 speechbrain>=0.5.11
 torchaudio>=0.10.1
