--- a/setup.cfg
+++ b/setup.cfg
@@ -11,4 +11,4 @@ classifiers =
 packages = simple_diarizer
 package_dir =
     simple_diarizer = simple_diarizer
-python_requires = >=3.7,<3.10
+python_requires = >=3.7
